--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8080
+
+
+#Url donde esta el servicio de tu mysql y el nombre de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+
+#Usuario y contrasena para tu base de datos descrita en la linea anterior
+spring.datasource.username=root
+spring.datasource.password=rootmysql
+
+
+#si la base de datos ya existe none si deseamos modificarla update para crear con el codigo
+spring.jpa.hibernate.ddl-auto= update
+
 
