--- a/src/main/resources/application-prod1.properties
+++ b/src/main/resources/application-prod1.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+#Indica el driver/lib para conectar java a mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot
@@ -12,4 +14,5 @@ spring.datasource.password=rootmysql
 #si la base de datos ya existe none si deseamos modificarla update para crear con el codigo
 spring.jpa.hibernate.ddl-auto= update
 
-
+#[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
+spring.jpa.show-sql = true
